--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-VUE_APP_PROJECT = "https://github.com/cmliu/sub-web-modify"
+VUE_APP_PROJECT = "https://github.com/Quanda666/sub-web-modify"
 
-VUE_APP_BOT_LINK = "https://t.me/CMLiussss"
+VUE_APP_BOT_LINK = "https://t.me/quanda03"
 
-VUE_APP_BILIBILI_LINK = "https://space.bilibili.com/138129883"
+VUE_APP_BILIBILI_LINK = "https://space.bilibili.com/511560722"
 
-VUE_APP_YOUTUBE_LINK = "https://www.youtube.com/@CMLiussss"
+VUE_APP_YOUTUBE_LINK = "https://www.youtube.com/@%E9%A2%9C%E7%9F%A5%E6%99%A8"
 
 VUE_APP_BASIC_VIDEO = "https://www.youtube.com/watch?v=C4WV4223uYw"
 
@@ -17,10 +17,10 @@ VUE_APP_FILTER_CONFIG = "https://github.com/tindy2013/subconverter/blob/a24cb7c0
 VUE_APP_SUBCONVERTER_REMOTE_CONFIG = "https://subconverter.oss-ap-southeast-1.aliyuncs.com/Rules/RemoteConfig/universal/urltest.ini"
 
 # API 后端
-VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "https://subapi.cmliussss.net"
+VUE_APP_SUBCONVERTER_DEFAULT_BACKEND = "http://sub.xxvxx.ggff.net/"
 
 # 短链接后端
-VUE_APP_MYURLS_DEFAULT_BACKEND = "https://v1.mk"
+VUE_APP_MYURLS_DEFAULT_BACKEND = "https://oooo.vvvv.ee/"
 
 # 文本托管后端
 VUE_APP_CONFIG_UPLOAD_BACKEND = "https://subapi.v1.mk"
